@@ -208,7 +208,6 @@ UpgradeEntity
             >>> bool(_extractStepInfo(tool, 'ID', e, '1.0'))
             True
 
-
         2.0 == 2.0 < 3.0
 
             >>> e.versionMatch('2.0')
@@ -310,9 +309,9 @@ UpgradeEntity
             >>> e.versionMatch('2.0')
             False
             >>> e.isProposed(tool, '2.0')
-            True
+            False
             >>> bool(_extractStepInfo(tool, 'ID', e, '2.0'))
-            True
+            False
 
     with combined restrictions: 1.1 -> 2.0, true checker
     ----------------------------------------------------
@@ -333,7 +332,7 @@ UpgradeEntity
             >>> e.versionMatch('1.0')
             False
             >>> e.isProposed(tool, '1.0')
-            True
+            False
             >>> bool(_extractStepInfo(tool, 'ID', e, '1.0'))
             True
 
@@ -342,9 +341,9 @@ UpgradeEntity
             >>> e.versionMatch('2.0')
             False
             >>> e.isProposed(tool, '2.0')
-            True
+            False
             >>> bool(_extractStepInfo(tool, 'ID', e, '2.0'))
-            True
+            False
 
     with combined restrictions: 2.0 -> 3.0, true checker
     ----------------------------------------------------
@@ -365,7 +364,7 @@ UpgradeEntity
             >>> e.versionMatch('1.0')
             False
             >>> e.isProposed(tool, '1.0')
-            True
+            False
             >>> bool(_extractStepInfo(tool, 'ID', e, '1.0'))
             True
 
