@@ -12,11 +12,10 @@
       <div tal:replace="info/title">INFO</div>
     </td>
     <td class="form-help">
-      <div tal:condition="info/haspath"
-           tal:content="structure string:(${info/ssource} &amp;#8594; ${info/sdest})">PATH</div>
+      <div tal:content="structure string:(${info/ssource} &amp;#8594; ${info/sdest})">PATH</div>
     </td>
     <td class="form-help">
-      <div tal:condition="not:info/proposed"
+      <div tal:condition="info/done"
            tal:replace="default">(done)</div>
     </td>
   </metal:upgrade-step>
